--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.14.0",
     "@nuxt/image": "^1.10.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "better-sqlite3": "^11.10.0",
     "eslint": "^9.30.0",
     "nuxt": "^3.17.5",
