--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nuxt/image": "^1.10.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@vueuse/core": "^13.4.0",
+    "@vueuse/nuxt": "^13.4.0",
     "better-sqlite3": "^11.10.0",
     "eslint": "^9.30.0",
     "nuxt": "^3.17.5",
